tests/snapshots/gql_snapshots__parse_create_with_return_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Create:
        patterns:
          - elements:
              - Node:
                  variable: p
                  labels:
                    - Person
                  properties:
                    - - name
                      - String: Alice
                  where_clause: ~
  return_clause:
    distinct: false
    items:
      - expression:
          Variable: p
        alias: ~
