tests/snapshots/gql_snapshots__parse_edge_bidirectional_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: a
            labels: []
            properties: []
        - Edge:
            variable: ~
            labels:
              - KNOWS
            direction: Both
            quantifier: ~
            properties: []
        - Node:
            variable: b
            labels: []
            properties: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: a
      alias: ~
    - expression:
        Variable: b
      alias: ~
order_clause: ~
limit_clause: ~
