tests/snapshots/gql_snapshots__parse_edge_incoming_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: a
            labels: []
            properties: []
        - Edge:
            variable: ~
            labels:
              - KNOWS
            direction: Incoming
            quantifier: ~
            properties: []
        - Node:
            variable: b
            labels: []
            properties: []
optional_match_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: a
      alias: ~
    - expression:
        Variable: b
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
