tests/snapshots/gql_snapshots__parse_edge_no_label_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: a
            labels: []
            properties: []
            where_clause: ~
        - Edge:
            variable: ~
            labels: []
            direction: Outgoing
            quantifier: ~
            properties: []
            where_clause: ~
        - Node:
            variable: b
            labels: []
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: a
      alias: ~
    - expression:
        Variable: b
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
