tests/snapshots/gql_snapshots__parse_group_by_single_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: p
          property: position
      alias: ~
    - expression:
        Aggregate:
          func: Count
          distinct: false
          expr:
            Variable: "*"
      alias: ~
group_by_clause:
  expressions:
    - Property:
        variable: p
        property: position
order_clause: ~
limit_clause: ~
