tests/snapshots/gql_snapshots__parse_group_by_with_avg_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
let_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: p
          property: position
      alias: ~
    - expression:
        Aggregate:
          func: Avg
          distinct: false
          expr:
            Property:
              variable: p
              property: ppg
      alias: avg_ppg
group_by_clause:
  expressions:
    - Property:
        variable: p
        property: position
having_clause: ~
order_clause: ~
limit_clause: ~
